<?xml version="1.0" encoding="utf-8"?>
<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="host_newui_optimise_title" translatable="false">一键优化</string>
    <string name="network_controller_title">Network permissions</string>
    <string name="traffic_setting">Data plan settings</string>
    <string name="total">Total</string>
    <string name="foreground">Foreground</string>
    <string name="background">Background</string>
    <string name="backgrounddata">Disable mobile data</string>
    <string name="diable_wlan">Disable Wi-Fi</string>
    <string name="disable_data">Background data</string>
    <string name="more_appusertraffic_container">View all</string>

</resources>